[gd_scene load_steps=5 format=3 uid="uid://f3b0yxes8yir"]

[ext_resource type="Script" uid="uid://coav3rmane0sl" path="res://scenes/ui/panel_inventory.gd" id="1_50mbj"]
[ext_resource type="Texture2D" uid="uid://qjfwmc0ddmxy" path="res://scenes/ui/backpack.png" id="2_r3ega"]
[ext_resource type="Texture2D" uid="uid://dxmaeqq5wtj48" path="res://scenes/ui/inventory_empty.png" id="3_n7ico"]
[ext_resource type="Script" uid="uid://bma8br4xtgt3m" path="res://scenes/ui/inventory_slot.gd" id="4_n7ico"]

[node name="PanelInventory" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_50mbj")

[node name="Backpack" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -202.0
offset_right = 53.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_r3ega")

[node name="Slot" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -118.0
offset_right = 59.0
offset_bottom = 22.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_n7ico")
script = ExtResource("4_n7ico")

[node name="Slot2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -60.0
offset_right = 59.0
offset_bottom = 80.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_n7ico")
script = ExtResource("4_n7ico")

[node name="Slot3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -1.00001
offset_right = 59.0
offset_bottom = 139.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_n7ico")
script = ExtResource("4_n7ico")

[node name="Slot4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = 59.0
offset_right = 59.0
offset_bottom = 199.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_n7ico")
script = ExtResource("4_n7ico")

[node name="Slot5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = 118.0
offset_right = 59.0
offset_bottom = 258.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_n7ico")
script = ExtResource("4_n7ico")
